<resources>
    <string name="app_name">BearBit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_logo">login_logo</string>
    <string name="next">></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_name">Please enter your name:</string>
    <string name="sign_up_email">Please enter your email:</string>
    <string name="sign_up_password">Set up a password:</string>
    <string name="sign_up_age">Please enter your age:</string>
    <string name='not_user'>Not a user?</string>
    <string name='register'>Register</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="dob">D.O.B</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">20</string>
    <string name="nav_header_desc">Beginner</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_calorie_tracker">Calorie Tracker</string>
    <string name="menu_running_tracker">Running Tracker</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_account_settings">Account Settings</string>
    <string name="title_activity_running_tracker">RunningTracker</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
</resources>
