<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <ImageView
        android:id="@+id/navigation_drawer_user_icon"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/nav_header_desc"
        android:layout_gravity="center"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/nav_header_desc"
        android:layout_gravity="center"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/navigation_drawer_user_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:fontFamily="@font/tajawal_regular" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:textSize="9dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textAlignment="center"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
