<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginScreen"
    tools:ignore="LabelFor" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="165dp"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:contentDescription="@string/login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginlogo" />

    <TextView
        android:id="@+id/emailTextViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="333dp"
        android:layout_marginRight="333dp"
        android:layout_marginBottom="8dp"
        android:text="@string/email"
        android:textColor="@color/light"
        android:typeface="normal"
        app:fontFamily="@font/tajawal_light"
        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textSize="14sp"
        app:fontFamily="@font/tajawal_light"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextViewLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordTextViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="313dp"
        android:layout_marginRight="313dp"
        android:layout_marginBottom="8dp"
        android:text="@string/password"
        android:textColor="@color/light"
        android:typeface="normal"
        app:fontFamily="@font/tajawal_light"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditTextLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordEditTextLogin"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:typeface="normal"
        app:fontFamily="@font/tajawal_light"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="114dp"
        android:layout_height="76dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:background="@drawable/next_button_selector"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signUpButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="139dp"
        android:layout_height="61dp"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/green_button"
        android:paddingBottom="8dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:fontFamily="@font/tajawal_medium"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>