<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginScreen"
    tools:ignore="LabelFor" >

    <EditText
        android:id="@+id/registerNameEditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:autoText="false"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="text|textEmailAddress"
        android:paddingTop="5sp"
        android:singleLine="true"
        android:textSize="18sp"
        app:fontFamily="@font/tajawal_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerNameTextView" />

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="5sp"
        android:singleLine="true"
        android:textSize="18sp"
        app:fontFamily="@font/tajawal_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailTextView" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textEmailAddress|textWebPassword"
        android:paddingTop="5sp"
        android:singleLine="true"
        android:textSize="18sp"
        app:fontFamily="@font/tajawal_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordTextView" />

    <EditText
        android:id="@+id/registerDateEditText"
        android:layout_width="68dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="01"
        android:inputType="number|textEmailAddress"
        android:paddingTop="5sp"
        android:singleLine="true"
        android:textSize="18sp"
        app:fontFamily="@font/tajawal_light"
        app:layout_constraintEnd_toStartOf="@+id/registerMonthEditText"
        app:layout_constraintTop_toBottomOf="@+id/registerDOBTextView" />

    <EditText
        android:id="@+id/registerMonthEditText"
        android:layout_width="68dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="01"
        android:inputType="number|textEmailAddress"
        android:paddingTop="5sp"
        android:singleLine="true"
        android:textSize="18sp"
        app:fontFamily="@font/tajawal_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerDOBTextView" />

    <EditText
        android:id="@+id/registerYearEditText"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="1960"
        android:inputType="textEmailAddress"
        android:paddingTop="5sp"
        android:singleLine="true"
        android:textSize="18sp"
        app:fontFamily="@font/tajawal_light"
        app:layout_constraintStart_toEndOf="@+id/registerMonthEditText"
        app:layout_constraintTop_toBottomOf="@+id/registerDOBTextView" />

    <TextView
        android:id="@+id/registerNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        app:fontFamily="@font/tajawal_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/registerEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:fontFamily="@font/tajawal_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerNameEditText" />

    <TextView
        android:id="@+id/registerPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:textSize="18sp"
        app:fontFamily="@font/tajawal_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailEditText" />

    <TextView
        android:id="@+id/registerDOBTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dob"
        android:textSize="18sp"
        app:fontFamily="@font/tajawal_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText" />

    <Button
        android:id="@+id/registerNextButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/next_button_selector"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerBackButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/back_chevron_selector"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>